Prevent text falling off the bottom on Firefox.

--- a/css/default.scss
+++ b/css/default.scss
@@ -165,7 +165,7 @@ header {
   flex: 1;
 }
 .main-body {
-  margin: 2rem 0 2rem 0;
+  padding: 2rem 0 2rem 0;
 }
 
 @media screen and (min-width: $text-breakpoint) {
